# SuitableStruct

./: .gitignore  CMakeLists.txt  License.txt  README.md
.github/workflows/: ci.yml
headers/SuitableStruct/: Buffer.h  BufferFwd.h  BufferReader.h  Comparisons.h  DefaultTypes.h  Exceptions.h  Handlers.h  Hashes.h  Helpers.h  LongSSO.h  Serializer.h  SerializerJson.h  Swap.h
headers/SuitableStruct/Containers/: QHash.h  QMap.h  QSet.h  array.h  deque.h  forward_list.h  list.h  map.h  multimap.h  multiset.h  set.h  unordered_map.h  unordered_multiset.h  unordered_set.h  vector.h
headers/SuitableStruct/Internals/: BufferReader.h  Common.h  DefaultTypes.h  Exceptions.h  FwdDeclarations.h  Helpers.h  LongSSO.h  Qt5Replica.h  UniversalInserter.h  Version.h
src/: Buffer.cpp  BufferReader.cpp  DefaultTypes.cpp  Exceptions.cpp  Hashes.cpp  LongSSO.cpp  Serializer.cpp  SerializerJson.cpp
src/Internals/: DefaultTypes.cpp  Helpers.cpp  LongSSO.cpp  Qt5Replica.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  SuitableStructBM.cpp
tests/test/: CMakeLists.txt  test00_stub.zzz  test01_tools.cpp  test02_buffer.cpp  test03_comparisons.cpp  test04_hashes.cpp  test04a_qt5_qHash.cpp  test04b_hashes.cpp  test05_serialization.cpp  test06_versioning.cpp  test07_nested_versioning.cpp  test07_swap.cpp  test08_containers.cpp  test08_swap.cpp  test09_containers.cpp  test09_json.cpp  test10_json.cpp  test10_json_versioning.cpp  test11_custom_handlers.cpp  test11_json_versioning.cpp  test12_json_nested_versioning.cpp  test12_pre_post_operations.cpp  test13_custom_handlers.cpp  test13_serializer_tag.cpp  test13a_custom_handlers.cpp  test13b_custom_handlers_inheritance.cpp  test13c_custom_handlers_versioning.cpp  test14_pre_post_operations.cpp  test15_serializer_tag.cpp  test16_custom_handlers_versioning.cpp  test17_custom_handlers_versioning_json.cpp  test18_legacy_format_compatibility.cpp  test19_legacy_format_compatibility_json.cpp  test1_stub.zzz  test20NP_true_legacy_format_compatibility.cpp  test20P_true_legacy_format_compatibility.cpp  test21NP_true_legacy_format_compatibility_json.cpp  test21P_true_legacy_format_compatibility_json.cpp  test22_new_format_integrity_check.cpp  test23_new_format_integrity_check_json.cpp  (+14 more)
tests/test/utils/: time_utils.h
